socials gap fix

--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -1,8 +1,7 @@
 .socials {
   .item-social {
     @extend %socials-default-item;
-    margin-left: $socials-media-left-gap;
-    margin-top: $socials-media-left-gap;
+    margin-left: $socials-teaser-horizontal-bar-left-gap;
 
     &:first-child {
       margin-left: 0;
